--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.evaluacin1"
+        applicationId 'com.calam.evaluacin1'
         minSdk 23
         targetSdk 32
         versionCode 1
