--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,41 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Evaluación1"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+        <activity
+            android:name=".Mapa"
+            android:exported="false"
+            android:label="@string/title_activity_mapa" />
+
         <activity
             android:name=".Presentacion"
-            android:exported="false">
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
 
+                            <intent-filter>
+                                <action android:name="android.intent.action.MAIN" />
 
+                                <category android:name="android.intent.category.LAUNCHER" />
+                            </intent-filter>
         </activity>
+
         <activity
             android:name=".Info"
             android:exported="false">
@@ -37,14 +63,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                //<action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-            <meta-data
+            android:exported="false">
+          <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
