--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,3 +43,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.android.material:material:1.7.0'
 }
+
+secrets {
+
+    defaultPropertiesFileName 'local.properties'
+}
