--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,26 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-
-        android:label="@string/artebox"
         android:icon="@mipmap/ic_arteboxxx"
+        android:label="@string/artebox"
         android:roundIcon="@mipmap/ic_arteboxxx"
         android:supportsRtl="true"
         android:theme="@style/Theme.Evaluación1"
         tools:targetApi="31">
+        <activity
+            android:name=".RegisterActivity2"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".LoginActivity2"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Leer"
             android:exported="false">
